# GS1401

./: CMakeLists.txt  a.out
Class/: array_example.c  sandbox  sandbox.c
Class/zocbo/2022_1/Quiz1_뒷분반/: q1_4t6_1  q1_4t6_1.c  q1_4t6_1_ryu.c  q1_4t6_2  q1_4t6_2.c  q1_4t6_2_ryu.c  q1_4t6_3  q1_4t6_3.c  q1_4t6_3_ryu.c
Class/zocbo/2023_2/: q1.c
Quiz/Q1/: y3  y3.c
Reci_practice/Lab1/: 1  1.c  2  2.c  3  3.c
Reci_practice/Lab2/: 3_2  3_2.c  3_3  3_3.c  3_4.c
Reci_practice/Lab3/: 3_2  3_2.c  3_3  3_3.c  3_4  3_4.c
Reci_practice/Lab4/: 3_2.c  3_3  3_3.c  3_4  3_4.c  3_extra1.c
Recitation/Lab1/: ex1_1  ex1_1.c  ex1_2  ex1_2.c  ex1_3  ex1_3.c  ex1_extra  ex1_extra.c
Recitation/Lab10/: ex10_1  ex10_1.c  ex10_1_y  ex10_1_y.c  ex10_2  ex10_2.c  ex10_2_y  ex10_2_y.c  ex10_3  ex10_3.c  ex10_extra1  ex10_extra1.c  ex10_extra2  ex10_extra2.c
Recitation/Lab11/: ex11_1  ex11_1.c  ex11_2  ex11_2.c  ex11_3  ex11_3.c  ex11_extra  ex11_extra.c
Recitation/Lab2/: ex2_1  ex2_1.c  ex2_2  ex2_2.c  ex2_2_ye  ex2_2_ye.c  ex2_3  ex2_3.c  ex2_extra1  ex2_extra1.c  ex2_extra2  ex2_extra2.c  ex2_hello.c
Recitation/Lab3/: ex3_1  ex3_1.c  ex3_2  ex3_2.c  ex3_2_ye  ex3_2_ye.c  ex3_3  ex3_3.c  ex3_3_ye  ex3_3_ye.c  ex3_extra1  ex3_extra1.c  ex3_extra2  ex3_extra2.c
Recitation/Lab4/: ex4_1  ex4_1.c  ex4_2  ex4_2.c  ex4_3  ex4_3.c  ex4_extra1  ex4_extra1.c  ex4_extra2  ex4_extra2.c
Recitation/Lab5/: ex5_1  ex5_1.c  ex5_2  ex5_2.c  ex5_3  ex5_3.c  ex5_extra  ex5_extra.c
Recitation/Lab6/: ex6_1  ex6_1.c  ex6_2  ex6_2.c  ex6_3  ex6_3.c  ex6_extra  ex6_extra.c
Recitation/Lab7/: ex7_1  ex7_1.c  ex7_2  ex7_2.c  ex7_3  ex7_3.c
Recitation/Lab8/: ex8_1  ex8_1.c  ex8_2  ex8_2.c  ex8_3  ex8_3.c  ex8_extra1  ex8_extra1.c  ex8_extra2  ex8_extra2.c
Recitation/Lab9/: ex9_1  ex9_1.c  ex9_2  ex9_2.c  ex9_3  ex9_3.c  ex9_extra1  ex9_extra1.c  ex9_extra2  ex9_extra2.c
sandbox/: midterm  midterm.c  test  test.cpp
zocbo/2021_2/Quiz2_앞분반/: hello.txt  q2_1t3_2021-1  q2_1t3_2021-1.c  q2_1t3_2021-2  q2_1t3_2021-2.c  q2_1t3_2021-3  q2_1t3_2021-3.c  ryu_1.c  ryu_2.c  ryu_3.c
zocbo/2022_1/Quiz1_뒷분반/: q2_y.c
zocbo/2022_1/Quiz1_앞분반/: q1_1t3_1  q1_1t3_1_ryu.c  q1_1t3_2  q1_1t3_3  q1_1t3_3.c
zocbo/2022_1/Quiz2_뒷분반/: q2_4t6_2022-1  q2_4t6_2022-1.c  q2_4t6_2022-2  q2_4t6_2022-2.c  q2_4t6_2022-3  q2_4t6_2022-3.c  quiz2222.c  ryu_1.c  ryu_2.c  ryu_3.c
zocbo/2022_1/Quiz2_앞분반/: front.c  q2_1t3_2022-1  q2_1t3_2022-1.c  q2_1t3_2022-2  q2_1t3_2022-2.c  q2_1t3_2022-3  q2_1t3_2022-3.c  ryu_1.c  ryu_2.c  ryu_3.c
zocbo/2022_2/Quiz1_뒷분반/: q1_4t6_1  q1_4t6_1.c  q1_4t6_2  q1_4t6_3
zocbo/2022_2/Quiz1_앞분반/: q1_1t3_2.c  q1_1t3_3  q1_1t3_3.c
zocbo/2022_2/Quiz2_뒷분반/: q2_4t6_2022-1  q2_4t6_2022-1.c  q2_4t6_2022-2  q2_4t6_2022-2.c  q2_4t6_2022-3  q2_4t6_2022-3.c  ryu_1.c  ryu_2.c  ryu_3.c
zocbo/2022_2/Quiz2_앞분반/: q2_1t3_2022-1  q2_1t3_2022-1.c  q2_1t3_2022-2  q2_1t3_2022-2.c  q2_1t3_2022-3  q2_1t3_2022-3.c  ryu_1.c  ryu_2.c  ryu_3.c
zocbo/2023_1/Quiz1_뒷분반/: q1_4t6_1  q1_4t6_1_ryu.c  q1_4t6_2.c  q1_4t6_2_ryu.c  q1_4t6_3  q1_4t6_3.c
zocbo/2023_1/Quiz1_앞분반/: q1_1t3_1.c  q1_1t3_2  q1_1t3_2.c  q1_1t3_2_ryu.c  q1_1t3_3.c
zocbo/2023_1/Quiz2_앞분반/: q2_1t3_2023-1  q2_1t3_2023-1.c  q2_1t3_2023-2  q2_1t3_2023-2.c  q2_1t3_2023-3  q2_1t3_2023-3.c  ryu_1.c  ryu_2.c  ryu_3.c
zocbo/2023_2/Quiz1_뒷분반/: q1_4t6_1  q1_4t6_1_ryu.c  q1_4t6_2  q1_4t6_2.c  q1_4t6_3  q1_4t6_3_ryu.c  q2.c  q3.c
zocbo/2024_1/Quiz1_뒷분반/: q1_4t6_2  q1_4t6_3  q1_4t6_3.c
zocbo/2024_1/Quiz1_앞분반/: q1_1t3_1.c  q1_1t3_3.c
zocbo/2024_2/Quiz1_뒷분반/: q1_4t6_2  q1_4t6_2.c  q1_4t6_3.c
zocbo/2024_2/Quiz1_앞분반/: q1_1t3_1  q1_1t3_1.c  q1_1t3_2.c
(+35 files in other folders)
