cmake_minimum_required(VERSION 3.31)
project(GS1401 C)

set(CMAKE_C_STANDARD 11)

add_executable(GS1401
        Class/zocbo/2022_1/Quiz1_뒷분반/q1_4t6_1.c
        Class/zocbo/2022_1/Quiz1_뒷분반/q1_4t6_2.c
        Class/zocbo/2022_1/Quiz1_뒷분반/q1_4t6_3.c
        Class/zocbo/2022_1/Quiz1_앞분반/q1_1t3_1.c
        Class/zocbo/2022_1/Quiz1_앞분반/q1_1t3_2.c
        Class/zocbo/2022_1/Quiz1_앞분반/q1_1t3_3.c
        Class/zocbo/2022_2/Quiz1_뒷분반/q1_4t6_1.c
        Class/zocbo/2022_2/Quiz1_뒷분반/q1_4t6_2.c
        Class/zocbo/2022_2/Quiz1_뒷분반/q1_4t6_3.c
        Class/zocbo/2022_2/Quiz1_앞분반/q1_1t3_1.c
        Class/zocbo/2022_2/Quiz1_앞분반/q1_1t3_2.c
        Class/zocbo/2022_2/Quiz1_앞분반/q1_1t3_3.c
        Class/zocbo/2023_1/Quiz1_뒷분반/q1_4t6_1.c
        Class/zocbo/2023_1/Quiz1_뒷분반/q1_4t6_2.c
        Class/zocbo/2023_1/Quiz1_뒷분반/q1_4t6_3.c
        Class/zocbo/2023_1/Quiz1_앞분반/q1_1t3_1.c
        Class/zocbo/2023_1/Quiz1_앞분반/q1_1t3_2.c
        Class/zocbo/2023_1/Quiz1_앞분반/q1_1t3_3.c
        Class/zocbo/2023_2/Quiz1_뒷분반/q1_4t6_1.c
        Class/zocbo/2023_2/Quiz1_뒷분반/q1_4t6_2.c
        Class/zocbo/2023_2/Quiz1_뒷분반/q1_4t6_3.c
        Class/zocbo/2024_1/Quiz1_뒷분반/q1_4t6_1.c
        Class/zocbo/2024_1/Quiz1_뒷분반/q1_4t6_2.c
        Class/zocbo/2024_1/Quiz1_뒷분반/q1_4t6_3.c
        Class/zocbo/2024_1/Quiz1_앞분반/q1_1t3_1.c
        Class/zocbo/2024_1/Quiz1_앞분반/q1_1t3_2.c
        Class/zocbo/2024_1/Quiz1_앞분반/q1_1t3_3.c
        Class/zocbo/2024_2/Quiz1_뒷분반/q1_4t6_1.c
        Class/zocbo/2024_2/Quiz1_뒷분반/q1_4t6_2.c
        Class/zocbo/2024_2/Quiz1_뒷분반/q1_4t6_3.c
        Class/zocbo/2024_2/Quiz1_앞분반/q1_1t3_1.c
        Class/zocbo/2024_2/Quiz1_앞분반/q1_1t3_2.c
        Class/zocbo/2024_2/Quiz1_앞분반/q1_1t3_3.c
        Class/demo.c
        Class/sandbox.c
        Recitation/Lab1/ex1_1.c
        Recitation/Lab1/ex1_2.c
        Recitation/Lab1/ex1_3.c
        Recitation/Lab1/ex1_extra.c
        Recitation/Lab2/ex2_1.c
        Recitation/Lab2/ex2_2.c
        Recitation/Lab2/ex2_2_ye.c
        Recitation/Lab2/ex2_3.c
        Recitation/Lab2/ex2_extra1.c
        Recitation/Lab2/ex2_extra2.c
        Recitation/Lab2/ex2_hello.c
        Recitation/Lab3/ex3_1.c
        Recitation/Lab3/ex3_2.c
        Recitation/Lab3/ex3_2_ye.c
        Recitation/Lab3/ex3_3.c
        Recitation/Lab3/ex3_3_ye.c
        Recitation/Lab3/ex3_extra1.c
        Recitation/Lab3/ex3_extra2.c
        Recitation/Lab4/ex4_1.c
        Recitation/Lab4/ex4_2.c
        Recitation/Lab4/ex4_3.c
        Recitation/Lab4/ex4_extra1.c
        Recitation/Lab4/ex4_extra2.c
        Recitation/Lab5/ex5_1.c
        Recitation/Lab5/ex5_2.c
        Recitation/Lab5/ex5_3.c
        Recitation/Lab5/ex5_extra.c
        Class/zocbo/2022_1/Quiz1_뒷분반/q1_4t6_1_ryu.c
        Class/zocbo/2022_1/Quiz1_뒷분반/q1_4t6_2_ryu.c
        Class/zocbo/2022_1/Quiz1_뒷분반/q1_4t6_3_ryu.c
        Class/zocbo/2022_1/Quiz1_앞분반/q1_1t3_1_ryu.c
        Class/zocbo/2022_1/Quiz1_앞분반/q1_1t3_2_ryu.c
        Class/zocbo/2022_1/Quiz1_앞분반/q1_1t3_3_ryu.c
        Class/zocbo/2022_2/Quiz1_뒷분반/q1_4t6_1_ryu.c
        Class/zocbo/2023_1/Quiz1_뒷분반/q1_4t6_1_ryu.c
        Class/zocbo/2023_1/Quiz1_뒷분반/q1_4t6_2_ryu.c
        Class/zocbo/2023_1/Quiz1_뒷분반/q1_4t6_3_ryu.c
        Class/zocbo/2023_1/Quiz1_앞분반/q1_1t3_1_ryu.c
        Class/zocbo/2023_1/Quiz1_앞분반/q1_1t3_2_ryu.c
        Class/zocbo/2023_1/Quiz1_앞분반/q1_1t3_3_ryu.c
        Class/zocbo/2023_2/Quiz1_뒷분반/q1_4t6_1_ryu.c
        Class/zocbo/2023_2/Quiz1_뒷분반/q1_4t6_2_ryu.c
        Class/zocbo/2023_2/Quiz1_뒷분반/q1_4t6_3_ryu.c
        Class/zocbo/2024_1/Quiz1_뒷분반/q1_4t6_1_ryu.c)
